jw-varrando-player-demo/css/main.css
body {
    padding: 10px;
}

.wrapper {
    display: inline-block;
    width: 45%;
    min-width: 500px;
    vertical-align: top;
    padding: 10px;
    text-align: center;
}

.varrando-wrapper {
    vertical-align: top;
    padding: 10px;
    width: 100%;
    min-width: 500px;
    text-align: center;
    margin-bottom: 10px;
}

.e-player, #varrandoPlayer, #jwPlayer-html, #jwPlayer-flash, #jwPlayer {
    margin: 0px auto;
}

header {
    font-weight: bold;
    margin-bottom: 10px;
}

.companionWrapper { 
    width: 730px; 
    margin-top: 10px;
}
.companion {
    border: 1px #dddddd dashed; 
    float:left;
}

.error{
    color: red;
}

@media only screen and (min-device-width : 320px) and (max-device-width : 767px) {
    .wrapper{
        width: 100%;
    }
}


@media only screen and (min-device-width : 768px) and (max-device-width : 979px) {
    .wrapper{
        width: 100%;
    }
}

